--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
       content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="The wildest NFT and Defi hub on the blockchain! Earn CATCOINS through yield farming and NFT Staking!" />
+    <meta name="description" content="The wildest NFT and Defi hub on the blockchain! Earn Coins through yield farming and NFT Staking!" />
     <!-- Twitter description-->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@8bitcatsftm" />
-    <meta name="twitter:title" content="8BitCats.com - Fantom Opera's premier NFT Hub and USD pegged algocoin">
-    <meta name="twitter:description" content="The wildest NFT and Defi hub on the blockchain! Earn CATCOINS through yield farming and NFT Staking!">
+    <meta name="twitter:site" content="@cryptoverselol" />
+    <meta name="twitter:title" content="Cryptoverse - Crypto Game on Arbitrum">
+    <meta name="twitter:description" content="The wildest NFT and Defi hub on the blockchain! Earn COINS through yield farming and NFT Staking!">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/decenworld/8BitCats-Website/main/src/assets/img/example.png">
 
 
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@700&display=swap"
       rel="stylesheet"
     />
-    <title>8BitCats.com - Fantom Opera's premier NFT Hub and USD pegged algocoin</title>
+    <title>Cryptoverse - Crypto Game on Arbitrum</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
