--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <!-- Twitter description-->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@cryptoverselol" />
-    <meta name="twitter:title" content="Cryptoverse - Crypto Game on Arbitrum">
+    <meta name="twitter:title" content="Cryptoverse - Crypto Game on Polygon">
     <meta name="twitter:description" content="The wildest NFT and Defi hub on the blockchain! Earn COINS through yield farming and NFT Staking!">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/decenworld/8BitCats-Website/main/src/assets/img/example.png">
 
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@700&display=swap"
       rel="stylesheet"
     />
-    <title>Cryptoverse - Crypto Game on Arbitrum</title>
+    <title>Cryptoverse - Crypto Game on Polygon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
